ingress-route/example-ingress-class-annotation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    route.openshift.io/termination: "edge"
spec:
  ingressClassName: openshift-default
  rules:
  - host: example.apps.cluster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 80
