ingress-route/route-split.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-route-split
spec:
  host: example.apps.your-cluster.com
  to:
    kind: Service
    name: service-a
    weight: 80
  alternateBackends:
  - kind: Service
    name: service-b
    weight: 20
